	PR debug/7241 	* dwarf2out.c (base_type_die): Use DW_ATE_*_char even if main 	variant is char_type_node and type name is char.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_3-rhl-branch@67001 138bc75d-0d04-0410-961f-82ee72b054a4